@@ -22,8 +22,9 @@ import org.sosy_lab.common.configuration.Configuration;
 import org.sosy_lab.common.configuration.InvalidConfigurationException;
 import org.sosy_lab.common.log.LogManager;
 import org.sosy_lab.common.log.LogManagerWithoutDuplicates;
-import org.sosy_lab.cpachecker.cfa.DummyCFAEdge;
+import org.sosy_lab.cpachecker.cfa.ast.FileLocation;
 import org.sosy_lab.cpachecker.cfa.ast.c.CFunctionDeclaration;
+import org.sosy_lab.cpachecker.cfa.model.BlankEdge;
 import org.sosy_lab.cpachecker.cfa.model.CFAEdge;
 import org.sosy_lab.cpachecker.cfa.model.CFANode;
 import org.sosy_lab.cpachecker.cfa.types.MachineModel;
@@ -39,6 +40,7 @@ import org.sosy_lab.cpachecker.cpa.smg2.util.value.SMGCPAExpressionEvaluator;
 import org.sosy_lab.cpachecker.cpa.smg2.util.value.ValueAndSMGState;
 import org.sosy_lab.cpachecker.cpa.value.type.NumericValue;
 import org.sosy_lab.cpachecker.cpa.value.type.Value;
+import org.sosy_lab.cpachecker.exceptions.CPATransferException;
 import org.sosy_lab.cpachecker.util.predicates.pathformula.ctoformula.CtoFormulaConverter;
 import org.sosy_lab.cpachecker.util.predicates.pathformula.pointeraliasing.CToFormulaConverterWithPointerAliasing;
 import org.sosy_lab.cpachecker.util.predicates.pathformula.pointeraliasing.FormulaEncodingWithPointerAliasingOptions;
@@ -78,8 +80,13 @@ public class SMGCPATest0 {
   // Some tasks define their own list length, as e.g. nested lists get quite expensive fast
   protected static final int TEST_LIST_LENGTH = 50;
 
-  protected CFAEdge dummyCDAEdge =
-      new DummyCFAEdge(CFANode.newDummyCFANode(), CFANode.newDummyCFANode());
+  protected CFAEdge dummyCFAEdge =
+      new BlankEdge(
+          "dummy edge",
+          FileLocation.DUMMY,
+          CFANode.newDummyCFANode(),
+          CFANode.newDummyCFANode(),
+          "dummy for tests");
 
   // The visitor should always use the currentState!
   @Before
@@ -92,7 +99,7 @@ public class SMGCPATest0 {
     dllSize = pointerSizeInBits.multiply(BigInteger.valueOf(3));
     dllSizeValue = new NumericValue(dllSize);
     sllSizeValue = new NumericValue(sllSize);
-    // Per default we expect the nfo after the hfo and the pfo after that
+    // By default, we expect the nfo after the hfo and the pfo after that
     nfo = hfo.add(pointerSizeInBits);
     pfo = nfo.add(pointerSizeInBits);
     logger = new LogManagerWithoutDuplicates(LogManager.createTestLogManager());
@@ -142,6 +149,7 @@ public class SMGCPATest0 {
 
     return new ConstraintsSolver(
         Configuration.defaultConfiguration(),
+        machineModel,
         smtSolver,
         formulaManager,
         converter,
@@ -211,7 +219,7 @@ public class SMGCPATest0 {
             numericPointerSizeInBits,
             new NumericValue(0),
             null,
-            dummyCDAEdge);
+            dummyCFAEdge);
 
     // Pointer to the next list segment
     currentState =
@@ -221,7 +229,7 @@ public class SMGCPATest0 {
             numericPointerSizeInBits,
             listPtrs[0],
             null,
-            dummyCDAEdge);
+            dummyCFAEdge);
     if (dll) {
       currentState =
           currentState.writeValueWithChecks(
@@ -230,7 +238,7 @@ public class SMGCPATest0 {
               numericPointerSizeInBits,
               new NumericValue(0),
               null,
-              dummyCDAEdge);
+              dummyCFAEdge);
       List<SMGStateAndOptionalSMGObjectAndOffset> derefedFirstAbstrListElem =
           currentState.dereferencePointer(listPtrs[0]);
       ValueAndSMGState ptrToFirstNotAbstrAndState =
@@ -239,12 +247,12 @@ public class SMGCPATest0 {
       Value ptrToFirstNotAbstr = ptrToFirstNotAbstrAndState.getValue();
       currentState =
           currentState.writeValueWithChecks(
-              derefedFirstAbstrListElem.get(0).getSMGObject(),
+              derefedFirstAbstrListElem.getFirst().getSMGObject(),
               new NumericValue(pfo),
               numericPointerSizeInBits,
               ptrToFirstNotAbstr,
               null,
-              dummyCDAEdge);
+              dummyCFAEdge);
     }
 
     SMGObject listSegmentBack = SMGObject.of(0, segmentSize, BigInteger.ZERO);
@@ -256,7 +264,7 @@ public class SMGCPATest0 {
             numericPointerSizeInBits,
             new NumericValue(0),
             null,
-            dummyCDAEdge);
+            dummyCFAEdge);
     currentState =
         currentState.writeValueWithChecks(
             listSegmentBack,
@@ -264,7 +272,7 @@ public class SMGCPATest0 {
             numericPointerSizeInBits,
             new NumericValue(0),
             null,
-            dummyCDAEdge);
+            dummyCFAEdge);
     if (dll) {
       currentState =
           currentState.writeValueWithChecks(
@@ -273,25 +281,25 @@ public class SMGCPATest0 {
               numericPointerSizeInBits,
               listPtrs[listLength - 3],
               null,
-              dummyCDAEdge);
+              dummyCFAEdge);
     }
 
     // Pointer from the last to be abstracted list to the last
     List<SMGStateAndOptionalSMGObjectAndOffset> derefedLastAbstrListElem =
         currentState.dereferencePointer(listPtrs[listLength - 3]);
     assertThat(derefedLastAbstrListElem).hasSize(1);
-    assertThat(derefedLastAbstrListElem.get(0).hasSMGObjectAndOffset()).isTrue();
+    assertThat(derefedLastAbstrListElem.getFirst().hasSMGObjectAndOffset()).isTrue();
     ValueAndSMGState ptrToLastAndState =
         currentState.searchOrCreateAddress(listSegmentBack, otherPtrOffset);
     currentState = ptrToLastAndState.getState();
     currentState =
         currentState.writeValueWithChecks(
-            derefedLastAbstrListElem.get(0).getSMGObject(),
+            derefedLastAbstrListElem.getFirst().getSMGObject(),
             new NumericValue(nfo),
             numericPointerSizeInBits,
             ptrToLastAndState.getValue(),
             null,
-            dummyCDAEdge);
+            dummyCFAEdge);
 
     return ImmutableList.<Value>builder()
         .add(ptrToFrontAndState.getValue())
@@ -324,7 +332,7 @@ public class SMGCPATest0 {
                 new NumericValue(pointerSizeInBits),
                 new NumericValue(j),
                 null,
-                dummyCDAEdge);
+                dummyCFAEdge);
       }
 
       // Pointer to the next list segment (from the prev to this, except for the last)
@@ -337,7 +345,7 @@ public class SMGCPATest0 {
                 numericPointerSizeInBits,
                 nextPointer,
                 null,
-                dummyCDAEdge);
+                dummyCFAEdge);
       }
       if (prevObject != null) {
         ValueAndSMGState pointerAndState =
@@ -350,7 +358,7 @@ public class SMGCPATest0 {
                 numericPointerSizeInBits,
                 pointerAndState.getValue(),
                 null,
-                dummyCDAEdge);
+                dummyCFAEdge);
       }
 
       if (dll) {
@@ -371,7 +379,7 @@ public class SMGCPATest0 {
                 numericPointerSizeInBits,
                 prevPointer,
                 null,
-                dummyCDAEdge);
+                dummyCFAEdge);
       }
       if (i == 0 || i == listLength - 1) {
         // Pointer to the list segment
@@ -386,14 +394,25 @@ public class SMGCPATest0 {
         currentState =
             currentState.copyAndAddLocalVariable(
                 numericPointerSizeInBits, i == 0 ? "first" : "last", null);
-        currentState =
-            currentState.writeToStackOrGlobalVariable(
-                i == 0 ? "first" : "last",
-                new NumericValue(BigInteger.ZERO),
-                new NumericValue(pointerSizeInBits),
-                pointerAndState.getValue(),
-                null,
-                dummyCDAEdge);
+        try {
+          currentState =
+              currentState.writeToStackOrGlobalVariable(
+                  i == 0 ? "first" : "last",
+                  new NumericValue(BigInteger.ZERO),
+                  new NumericValue(pointerSizeInBits),
+                  pointerAndState.getValue(),
+                  null,
+                  dummyCFAEdge);
+        } catch (CPATransferException e) {
+          if (e instanceof SMGException sMGException) {
+            throw sMGException;
+          } else if (e instanceof SMGSolverException sMGSolverException) {
+            throw sMGSolverException;
+          }
+          // This can never happen, but we are forced to do this as the visitor demands the
+          // CPATransferException
+          throw new RuntimeException(e);
+        }
       }
       if (listLength == 1) {
         ValueAndSMGState pointerAndState =
@@ -402,14 +421,25 @@ public class SMGCPATest0 {
         currentState = pointerAndState.getState();
         // Save all pointers in objects to not confuse the internal SMG assertions
         currentState = currentState.copyAndAddLocalVariable(numericPointerSizeInBits, "last", null);
-        currentState =
-            currentState.writeToStackOrGlobalVariable(
-                "last",
-                new NumericValue(BigInteger.ZERO),
-                numericPointerSizeInBits,
-                pointerAndState.getValue(),
-                null,
-                dummyCDAEdge);
+        try {
+          currentState =
+              currentState.writeToStackOrGlobalVariable(
+                  "last",
+                  new NumericValue(BigInteger.ZERO),
+                  numericPointerSizeInBits,
+                  pointerAndState.getValue(),
+                  null,
+                  dummyCFAEdge);
+        } catch (CPATransferException e) {
+          if (e instanceof SMGException sMGException) {
+            throw sMGException;
+          } else if (e instanceof SMGSolverException sMGSolverException) {
+            throw sMGSolverException;
+          }
+          // This can never happen, but we are forced to do this as the visitor demands the
+          // CPATransferException
+          throw new RuntimeException(e);
+        }
       }
 
       prevObject = listSegment;
@@ -487,7 +517,7 @@ public class SMGCPATest0 {
                 numericPointerSizeInBits,
                 new NumericValue(valueStart + j),
                 null,
-                dummyCDAEdge);
+                dummyCFAEdge);
       }
 
       // Pointer to the next list segment (from the prev to this, except for the last)
@@ -500,7 +530,7 @@ public class SMGCPATest0 {
                 numericPointerSizeInBits,
                 nextPointer,
                 null,
-                dummyCDAEdge);
+                dummyCFAEdge);
       }
       if (prevObject != null) {
         ValueAndSMGState pointerAndState =
@@ -513,7 +543,7 @@ public class SMGCPATest0 {
                 numericPointerSizeInBits,
                 pointerAndState.getValue(),
                 null,
-                dummyCDAEdge);
+                dummyCFAEdge);
       }
 
       if (dll) {
@@ -534,7 +564,7 @@ public class SMGCPATest0 {
                 numericPointerSizeInBits,
                 prevPointer,
                 null,
-                dummyCDAEdge);
+                dummyCFAEdge);
       }
       // Pointer to the list segment
       ValueAndSMGState pointerAndState =
@@ -558,7 +588,7 @@ public class SMGCPATest0 {
                 numericPointerSizeInBits,
                 pointer,
                 null,
-                dummyCDAEdge);
+                dummyCFAEdge);
       }
     }
     if (valueStart == 0) {
@@ -599,7 +629,7 @@ public class SMGCPATest0 {
    * Checks that all pointers given have data that is located in the beginning of the list as 32bit
    * integers with the first being 0, then +1 for each after that in the same list.
    *
-   * @param pointers a array of pointers pointing to a list with the default data scheme.
+   * @param pointers an array of pointers pointing to a list with the default data scheme.
    */
   protected void checkListDataIntegrity(Value[] pointers, boolean dll) throws SMGException {
     int toCheckData = sllSize.divide(pointerSizeInBits).subtract(BigInteger.ONE).intValue();
@@ -651,7 +681,7 @@ public class SMGCPATest0 {
               new NumericValue(BigInteger.valueOf(sizeOfElements)),
               valuesInOrder[i],
               null,
-              dummyCDAEdge);
+              dummyCFAEdge);
     }
 
     return array;
