@@ -28,6 +28,7 @@ import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
+import java.util.SequencedSet;
 import java.util.Set;
 import java.util.StringJoiner;
 import java.util.logging.Level;
@@ -69,7 +70,6 @@ import org.sosy_lab.cpachecker.cpa.location.LocationState;
 import org.sosy_lab.cpachecker.exceptions.CPAException;
 import org.sosy_lab.cpachecker.exceptions.UnrecognizedCodeException;
 import org.sosy_lab.cpachecker.util.AbstractStates;
-import org.sosy_lab.cpachecker.util.CFAUtils;
 import org.sosy_lab.cpachecker.util.Pair;
 import org.sosy_lab.cpachecker.util.cwriter.Statement.CompoundStatement;
 import org.sosy_lab.cpachecker.util.cwriter.Statement.FunctionDefinition;
@@ -89,27 +89,26 @@ public class ARGToCTranslator {
     private final CFAEdge cfaEdge;
     private final CompoundStatement currentBlock;
 
-    public ARGEdge(
-        ARGState pParent, ARGState pChild, CFAEdge pCfaEdge, CompoundStatement pCurrentBlock) {
+    ARGEdge(ARGState pParent, ARGState pChild, CFAEdge pCfaEdge, CompoundStatement pCurrentBlock) {
       parent = pParent;
       child = pChild;
       cfaEdge = pCfaEdge;
       currentBlock = pCurrentBlock;
     }
 
-    public ARGState getParentElement() {
+    ARGState getParentElement() {
       return parent;
     }
 
-    public ARGState getChildElement() {
+    ARGState getChildElement() {
       return child;
     }
 
-    public CFAEdge getCfaEdge() {
+    CFAEdge getCfaEdge() {
       return cfaEdge;
     }
 
-    public CompoundStatement getCurrentBlock() {
+    CompoundStatement getCurrentBlock() {
       return currentBlock;
     }
   }
@@ -220,9 +219,8 @@ public class ARGToCTranslator {
     isVoidMain = returnType instanceof CVoidType;
     if (!isVoidMain) {
       mainReturnVar = "__return_main";
-      if (returnType instanceof CArrayType) {
-        globalDefinitionsList.add(
-            ((CArrayType) returnType).toQualifiedASTString(mainReturnVar) + ";");
+      if (returnType instanceof CArrayType cArrayType) {
+        globalDefinitionsList.add(cArrayType.toQualifiedASTString(mainReturnVar) + ";");
       } else {
         globalDefinitionsList.add(returnType.toASTString(mainReturnVar) + ";");
       }
@@ -386,12 +384,12 @@ public class ARGToCTranslator {
 
         if (truthAssumption && elseCond != null) {
           currentBlock.addStatement(new SimpleStatement(edgeToChild, elseCond));
-          currentBlock.addStatement(result.get(0).getCurrentBlock());
+          currentBlock.addStatement(result.getFirst().getCurrentBlock());
         }
 
         ARGEdge newEdge = new ARGEdge(currentElement, child, edgeToChild, newBlock);
         if (truthAssumption) {
-          result.add(0, newEdge);
+          result.addFirst(newEdge);
         } else {
           result.add(newEdge);
         }
@@ -423,7 +421,7 @@ public class ARGToCTranslator {
     for (ARGState child : childrenOfElement) {
       CFAEdge edgeToChild = currentElement.getEdgeToChild(child);
 
-      Set<AExpression> conditions = new LinkedHashSet<>();
+      SequencedSet<AExpression> conditions = new LinkedHashSet<>();
       if (edgeToChild instanceof CAssumeEdge assumeEdge) {
         if (assumeEdge.getTruthAssumption()) {
           conditions.add(assumeEdge.getExpression());
@@ -561,42 +559,17 @@ public class ARGToCTranslator {
   }
 
   private CompoundStatement processEdge(
-      ARGState currentElement, ARGState childElement, CFAEdge edge, CompoundStatement currentBlock)
+      ARGState currentElement,
+      ARGState childElement,
+      @Nullable CFAEdge edge,
+      CompoundStatement currentBlock)
       throws CPAException {
-    if (edge instanceof CFunctionCallEdge) {
-      // if this is a function call edge we need to inline it
-      currentBlock = processFunctionCall(edge, currentBlock);
-    } else if (edge instanceof CReturnStatementEdge returnEdge) {
-      if (returnEdge.getExpression() != null && returnEdge.getExpression().isPresent()) {
-
-        String retval = returnEdge.getExpression().orElseThrow().toQualifiedASTString();
-        String returnVar;
-
-        if (childElement.isCovered()) {
-          returnVar = " __return_" + getCovering(childElement).getStateId();
-        } else {
-          returnVar = " __return_" + childElement.getStateId();
-          addGlobalReturnValueDecl(returnEdge, childElement.getStateId());
-        }
-        currentBlock.addStatement(new SimpleStatement(edge, returnVar + " = " + retval + ";"));
-      }
-    } else if (edge instanceof CFunctionReturnEdge returnEdge) {
-      // assumes that ReturnStateEdge is followed by FunctionReturnEdge
-      currentBlock =
-          processReturnStatementCall(
-              returnEdge.getSummaryEdge(), currentBlock, currentElement.getStateId());
-    } else if (edge == null) {
-      // assume that this is the case due to dynamic multi edges
-      List<CFAEdge> innerEdges = currentElement.getEdgesToChild(childElement);
-      StringBuilder edgeStatementCodes = new StringBuilder();
-      for (CFAEdge innerEdge : innerEdges) {
-        assert innerEdge.getEdgeType() != CFAEdgeType.AssumeEdge
-            : "Unexpected assume edge in dynamic multi edge " + innerEdge;
-        assert !(innerEdge instanceof CFunctionCallEdge || innerEdge instanceof CFunctionReturnEdge)
-            : "Unexpected edge " + innerEdge + " in dynmaic multi edge";
-        if (innerEdge instanceof CReturnStatementEdge) {
-          assert (innerEdges.get(innerEdges.size() - 1) == innerEdge);
-          CReturnStatementEdge returnEdge = (CReturnStatementEdge) innerEdge;
+    switch (edge) {
+      case CFunctionCallEdge functionCallEdge ->
+          // if this is a function call edge we need to inline it
+          currentBlock = processFunctionCall(functionCallEdge, currentBlock);
+      case CReturnStatementEdge returnEdge -> {
+        if (returnEdge.getExpression() != null && returnEdge.getExpression().isPresent()) {
 
           String retval = returnEdge.getExpression().orElseThrow().toQualifiedASTString();
           String returnVar;
@@ -607,22 +580,56 @@ public class ARGToCTranslator {
             returnVar = " __return_" + childElement.getStateId();
             addGlobalReturnValueDecl(returnEdge, childElement.getStateId());
           }
-          edgeStatementCodes.append(returnVar + " = " + retval + ";");
-        } else {
-          edgeStatementCodes.append(processSimpleEdge(innerEdge));
+          currentBlock.addStatement(new SimpleStatement(edge, returnVar + " = " + retval + ";"));
         }
-        edgeStatementCodes.append("\n");
       }
-      currentBlock.addStatement(new SimpleStatement(edge, edgeStatementCodes.toString()));
-    } else if (mustHandleDefaultReturn(edge)) {
-      processDefaultReturn(
-          (CFunctionDeclaration)
-              ((FunctionExitNode) edge.getSuccessor()).getEntryNode().getFunctionDefinition(),
-          childElement.getStateId());
-    } else {
-      String statement = processSimpleEdge(edge);
-      if (!statement.isEmpty()) {
-        currentBlock.addStatement(new SimpleStatement(edge, statement));
+      case CFunctionReturnEdge returnEdge ->
+          // assumes that ReturnStateEdge is followed by FunctionReturnEdge
+          currentBlock =
+              processReturnStatementCall(
+                  returnEdge.getSummaryEdge(), currentBlock, currentElement.getStateId());
+      case null -> {
+        // assume that this is the case due to dynamic multi edges
+        List<CFAEdge> innerEdges = currentElement.getEdgesToChild(childElement);
+        StringBuilder edgeStatementCodes = new StringBuilder();
+        for (CFAEdge innerEdge : innerEdges) {
+          assert innerEdge.getEdgeType() != CFAEdgeType.AssumeEdge
+              : "Unexpected assume edge in dynamic multi edge " + innerEdge;
+          assert !(innerEdge instanceof CFunctionCallEdge
+                  || innerEdge instanceof CFunctionReturnEdge)
+              : "Unexpected edge " + innerEdge + " in dynmaic multi edge";
+          if (innerEdge instanceof CReturnStatementEdge returnEdge) {
+            assert (innerEdges.getLast() == innerEdge);
+
+            String retval = returnEdge.getExpression().orElseThrow().toQualifiedASTString();
+            String returnVar;
+
+            if (childElement.isCovered()) {
+              returnVar = " __return_" + getCovering(childElement).getStateId();
+            } else {
+              returnVar = " __return_" + childElement.getStateId();
+              addGlobalReturnValueDecl(returnEdge, childElement.getStateId());
+            }
+            edgeStatementCodes.append(returnVar + " = " + retval + ";");
+          } else {
+            edgeStatementCodes.append(processSimpleEdge(innerEdge));
+          }
+          edgeStatementCodes.append("\n");
+        }
+        currentBlock.addStatement(new SimpleStatement(edge, edgeStatementCodes.toString()));
+      }
+      default -> {
+        if (mustHandleDefaultReturn(edge)) {
+          processDefaultReturn(
+              (CFunctionDeclaration)
+                  ((FunctionExitNode) edge.getSuccessor()).getEntryNode().getFunctionDefinition(),
+              childElement.getStateId());
+        } else {
+          String statement = processSimpleEdge(edge);
+          if (!statement.isEmpty()) {
+            currentBlock.addStatement(new SimpleStatement(edge, statement));
+          }
+        }
       }
     }
 
@@ -685,8 +692,8 @@ public class ARGToCTranslator {
           (CFunctionReturnEdge) pReturnEdge.getSuccessor().getLeavingEdge(0);
       CFunctionEntryNode fn = functionReturnEdge.getFunctionEntry();
       CType retType = fn.getFunctionDefinition().getType().getReturnType();
-      if (retType instanceof CArrayType) {
-        returnType = ((CArrayType) retType).toQualifiedASTString(varName);
+      if (retType instanceof CArrayType cArrayType) {
+        returnType = cArrayType.toQualifiedASTString(varName);
       } else {
         returnType = retType.toASTString(varName);
       }
@@ -698,8 +705,8 @@ public class ARGToCTranslator {
     CType returnType = pFunDecl.getType().getReturnType();
     if (!(returnType instanceof CVoidType)) {
       String varName = "__return_" + pElementId;
-      if (returnType instanceof CArrayType) {
-        globalDefinitionsList.add(((CArrayType) returnType).toQualifiedASTString(varName) + ";");
+      if (returnType instanceof CArrayType cArrayType) {
+        globalDefinitionsList.add(cArrayType.toQualifiedASTString(varName) + ";");
       } else {
         globalDefinitionsList.add(returnType.toASTString(varName) + ";");
       }
@@ -712,105 +719,94 @@ public class ARGToCTranslator {
     }
 
     switch (pCFAEdge.getEdgeType()) {
-      case BlankEdge:
+      case BlankEdge -> {
         // nothing to do
-        break;
-
-      case AssumeEdge:
+      }
+      case AssumeEdge -> {
         // nothing to do
-        break;
-
-      case StatementEdge:
-        {
-          CStatementEdge lStatementEdge = (CStatementEdge) pCFAEdge;
-          String statementText = lStatementEdge.getStatement().toQualifiedASTString();
-          if (deleteAssertFail && statementText.startsWith(ASSERTFAIL)) {
-            return "";
-          }
-          return statementText + (statementText.endsWith(";") ? "" : ";");
+      }
+      case StatementEdge -> {
+        CStatementEdge lStatementEdge = (CStatementEdge) pCFAEdge;
+        String statementText = lStatementEdge.getStatement().toQualifiedASTString();
+        if (deleteAssertFail && statementText.startsWith(ASSERTFAIL)) {
+          return "";
         }
+        return statementText + (statementText.endsWith(";") ? "" : ";");
+      }
+      case DeclarationEdge -> {
+        CDeclarationEdge lDeclarationEdge = (CDeclarationEdge) pCFAEdge;
+        String declaration;
+        // TODO adapt if String in
+        // org.sosy_lab.cpachecker.cfa.parser.eclipse.c.ASTConverter#createInitializedTemporaryVariable is changed
+        if (lDeclarationEdge
+            .getDeclaration()
+            .toQualifiedASTString()
+            .contains("__CPAchecker_TMP_")) {
+          declaration = lDeclarationEdge.getDeclaration().toQualifiedASTString();
+        } else {
+          // TODO check if works without lDeclarationEdge.getRawStatement();
+          declaration = lDeclarationEdge.getDeclaration().toQualifiedASTString();
 
-      case DeclarationEdge:
-        {
-          CDeclarationEdge lDeclarationEdge = (CDeclarationEdge) pCFAEdge;
-          String declaration;
-          // TODO adapt if String in
-          // org.sosy_lab.cpachecker.cfa.parser.eclipse.c.ASTConverter#createInitializedTemporaryVariable is changed
-          if (lDeclarationEdge
-              .getDeclaration()
-              .toQualifiedASTString()
-              .contains("__CPAchecker_TMP_")) {
-            declaration = lDeclarationEdge.getDeclaration().toQualifiedASTString();
-          } else {
-            // TODO check if works without lDeclarationEdge.getRawStatement();
-            declaration = lDeclarationEdge.getDeclaration().toQualifiedASTString();
+          if (lDeclarationEdge.getDeclaration() instanceof CVariableDeclaration varDecl) {
 
-            if (lDeclarationEdge.getDeclaration() instanceof CVariableDeclaration) {
-              CVariableDeclaration varDecl =
-                  (CVariableDeclaration) lDeclarationEdge.getDeclaration();
-              if (varDecl.getType() instanceof CArrayType
-                  && varDecl.getInitializer() instanceof CInitializerExpression) {
-                int assignAfterPos = declaration.indexOf("=") + 1;
-                declaration =
-                    declaration.substring(0, assignAfterPos)
-                        + "{"
-                        + declaration.substring(assignAfterPos, declaration.lastIndexOf(";"))
-                        + "};";
+            if (varDecl.getType() instanceof CArrayType
+                && varDecl.getInitializer() instanceof CInitializerExpression) {
+              int assignAfterPos = declaration.indexOf("=") + 1;
+              declaration =
+                  declaration.substring(0, assignAfterPos)
+                      + "{"
+                      + declaration.substring(assignAfterPos, declaration.lastIndexOf(";"))
+                      + "};";
+            }
+          }
+
+          if (declaration.contains(",")) {
+            for (CFAEdge predEdge : pCFAEdge.getPredecessor().getEnteringEdges()) {
+              if (predEdge
+                  .getRawStatement()
+                  .equals(lDeclarationEdge.getDeclaration().toASTString())) {
+                declaration = "";
+                break;
               }
             }
-
-            if (declaration.contains(",")) {
-              for (CFAEdge predEdge : CFAUtils.enteringEdges(pCFAEdge.getPredecessor())) {
-                if (predEdge
-                    .getRawStatement()
-                    .equals(lDeclarationEdge.getDeclaration().toASTString())) {
-                  declaration = "";
-                  break;
-                }
-              }
-            }
-            if (config.doIncludeHeader()
-                && declaration.contains("assert")
-                && lDeclarationEdge.getDeclaration() instanceof CFunctionDeclaration) {
-              declaration = "";
-            }
           }
-
-          if (declaration.contains("org.eclipse.cdt.internal.core.dom.parser.ProblemType@")) {
-            throw new CPAException(
-                "Failed to translate ARG into program because a type could not be properly"
-                    + " resolved.");
+          if (config.doIncludeHeader()
+              && declaration.contains("assert")
+              && lDeclarationEdge.getDeclaration() instanceof CFunctionDeclaration) {
+            declaration = "";
           }
-
-          if (lDeclarationEdge.getDeclaration().isGlobal()) {
-            globalDefinitionsList.add(declaration + (declaration.endsWith(";") ? "" : ";"));
-          } else {
-            return declaration;
-          }
-
-          break;
         }
 
-      case CallToReturnEdge:
-        //          this should not have been taken
-        throw new AssertionError("CallToReturnEdge in counterexample path: " + pCFAEdge);
+        if (declaration.contains("org.eclipse.cdt.internal.core.dom.parser.ProblemType@")) {
+          throw new CPAException(
+              "Failed to translate ARG into program because a type could not be properly"
+                  + " resolved.");
+        }
 
-      default:
-        throw new AssertionError(
-            "Unexpected edge " + pCFAEdge + " of type " + pCFAEdge.getEdgeType());
+        if (lDeclarationEdge.getDeclaration().isGlobal()) {
+          globalDefinitionsList.add(declaration + (declaration.endsWith(";") ? "" : ";"));
+        } else {
+          return declaration;
+        }
+      }
+      case CallToReturnEdge ->
+          //          this should not have been taken
+          throw new AssertionError("CallToReturnEdge in counterexample path: " + pCFAEdge);
+      default ->
+          throw new AssertionError(
+              "Unexpected edge " + pCFAEdge + " of type " + pCFAEdge.getEdgeType());
     }
 
     return "";
   }
 
-  private CompoundStatement processFunctionCall(CFAEdge pCFAEdge, CompoundStatement currentBlock) {
+  private CompoundStatement processFunctionCall(
+      CFunctionCallEdge pCFAEdge, CompoundStatement currentBlock) {
     CompoundStatement newBlock = new InlinedFunction(currentBlock);
     currentBlock.addStatement(newBlock);
 
-    CFunctionCallEdge lFunctionCallEdge = (CFunctionCallEdge) pCFAEdge;
-
-    List<CExpression> actualParams = lFunctionCallEdge.getArguments();
-    CFunctionEntryNode fn = lFunctionCallEdge.getSuccessor();
+    List<CExpression> actualParams = pCFAEdge.getArguments();
+    CFunctionEntryNode fn = pCFAEdge.getSuccessor();
     List<CParameterDeclaration> formalParams = fn.getFunctionParameters();
 
     List<Statement> actualParamAssignStatements = new ArrayList<>();
@@ -870,47 +866,59 @@ public class ARGToCTranslator {
 
   private CompoundStatement getBlockAfterEndOfFunction(CompoundStatement currentBlock) {
     switch (config.doHandleCompoundStatementAtEndOfFunction()) {
-      case CLOSEFUNCTIONBLOCK:
+      case CLOSEFUNCTIONBLOCK -> {
         while (!(currentBlock instanceof InlinedFunction)) {
           currentBlock = currentBlock.getSurroundingBlock();
         }
         return currentBlock.getSurroundingBlock();
-      case ADDNEWBLOCK:
+      }
+      case ADDNEWBLOCK -> {
         currentBlock = new CompoundStatement(currentBlock);
         currentBlock.getSurroundingBlock().addStatement(currentBlock);
         return currentBlock;
-      default: // KEEPBLOCK
+      }
+      default -> {
+        // KEEPBLOCK
         return currentBlock;
+      }
     }
   }
 
   private @Nullable Statement processTargetState(
       final ARGState pTargetState, final CFAEdge pEdgeToTarget) {
     switch (config.getTargetStrategy()) {
-      case RUNTIMEVERIFICATION:
+      case RUNTIMEVERIFICATION -> {
         logger.log(Level.ALL, "HALT for line no ", pEdgeToTarget.getLineNumber());
         return new SimpleStatement(
             pEdgeToTarget,
             "HALT" + pTargetState.getStateId() + ": goto HALT" + pTargetState.getStateId() + ";");
-      case ASSERTFALSE:
+      }
+      case ASSERTFALSE -> {
         return new SimpleStatement(pEdgeToTarget, "assert(0);");
-      case FRAMACPRAGMA:
+      }
+      case FRAMACPRAGMA -> {
         if (addPragmaAfter.contains(pTargetState)) {
           return new SimpleStatement(pEdgeToTarget, "/*@ slice pragma ctrl; */");
         } else {
           return null;
         }
-      case VERIFIERERROR:
+      }
+      case VERIFIERERROR -> {
         return new SimpleStatement(pEdgeToTarget, "reach_error();");
-      case REACHASMEMSAFETY:
+      }
+      case REACHASMEMSAFETY -> {
         return new SimpleStatement("{int i =  *(int *)0;}");
-      case REACHASOVERFLOW:
+      }
+      case REACHASOVERFLOW -> {
         return new SimpleStatement(pEdgeToTarget, "-INT_MIN;");
-      case REACHASTERMINATION:
+      }
+      case REACHASTERMINATION -> {
         return new SimpleStatement(pEdgeToTarget, "while (1) {}");
-      default:
+      }
+      default -> {
         // case NONE
         return null;
+      }
     }
   }
 
@@ -957,7 +965,7 @@ public class ARGToCTranslator {
             if (getRealTruthAssumption((CAssumeEdge) edge)) {
               assumeInfo.add(Pair.of(child, decInfo));
             } else {
-              assumeInfo.add(0, Pair.of(child, decInfo));
+              assumeInfo.addFirst(Pair.of(child, decInfo));
             }
           } else {
             waitlist.push(Pair.of(child, decInfo));
@@ -982,7 +990,7 @@ public class ARGToCTranslator {
       probs = new ArrayList<>(decProblems.get(key));
       probVars = new ArrayList<>();
 
-      for (Entry<CDeclaration, String> prob : probs.get(0).entrySet()) {
+      for (Entry<CDeclaration, String> prob : probs.getFirst().entrySet()) {
         boolean containAll = true;
         boolean different = false;
         for (int i = 1; i < probs.size(); i++) {
@@ -1009,19 +1017,19 @@ public class ARGToCTranslator {
 
   private DeclarationInfo handleDecInfoForEdge(
       final CFAEdge edge, final ARGState pred, final ARGState succ, final DeclarationInfo decInfo) {
-    if (edge instanceof CFunctionCallEdge) {
+    if (edge instanceof CFunctionCallEdge cFunctionCallEdge) {
       return decInfo.fromFunctionCall(
-          (CFunctionCallEdge) edge, pred.getStateId() + ":" + +succ.getStateId());
+          cFunctionCallEdge, pred.getStateId() + ":" + +succ.getStateId());
     }
 
     if (edge instanceof CFunctionReturnEdge) {
       return decInfo.fromFunctionReturn();
     }
-    if (edge instanceof CDeclarationEdge
-        && ((CDeclarationEdge) edge).getDeclaration() instanceof CVariableDeclaration
-        && !((CDeclarationEdge) edge).getDeclaration().isGlobal()) {
+    if (edge instanceof CDeclarationEdge cDeclarationEdge
+        && cDeclarationEdge.getDeclaration() instanceof CVariableDeclaration
+        && !cDeclarationEdge.getDeclaration().isGlobal()) {
       return decInfo.addNewDeclarationInfo(
-          ((CDeclarationEdge) edge).getDeclaration(), pred.getStateId() + ":" + +succ.getStateId());
+          cDeclarationEdge.getDeclaration(), pred.getStateId() + ":" + +succ.getStateId());
     }
 
     return decInfo;
@@ -1031,14 +1039,14 @@ public class ARGToCTranslator {
     private final ImmutableMap<CDeclaration, String> currentFuncDecInfo;
     private final ImmutableList<ImmutableMap<CDeclaration, String>> calleeFunDecInfos;
 
-    public DeclarationInfo(
+    DeclarationInfo(
         final ImmutableMap<CDeclaration, String> funDec,
         final ImmutableList<ImmutableMap<CDeclaration, String>> calleesFunInfo) {
       currentFuncDecInfo = funDec;
       calleeFunDecInfos = calleesFunInfo;
     }
 
-    public DeclarationInfo addNewDeclarationInfo(final CDeclaration dec, final String decId) {
+    DeclarationInfo addNewDeclarationInfo(final CDeclaration dec, final String decId) {
       ImmutableMap<CDeclaration, String> newFunDecInfo;
       if (currentFuncDecInfo.containsKey(dec)) {
         ImmutableMap.Builder<CDeclaration, String> builder = ImmutableMap.builder();
@@ -1060,7 +1068,7 @@ public class ARGToCTranslator {
       return new DeclarationInfo(newFunDecInfo, calleeFunDecInfos);
     }
 
-    public DeclarationInfo fromFunctionCall(final CFunctionCallEdge callEdge, final String decId) {
+    DeclarationInfo fromFunctionCall(final CFunctionCallEdge callEdge, final String decId) {
       ImmutableMap.Builder<CDeclaration, String> builder = ImmutableMap.builder();
 
       for (CParameterDeclaration paramDecl :
@@ -1072,11 +1080,10 @@ public class ARGToCTranslator {
           builder.buildOrThrow(), listAndElement(calleeFunDecInfos, currentFuncDecInfo));
     }
 
-    public DeclarationInfo fromFunctionReturn() {
+    DeclarationInfo fromFunctionReturn() {
       checkState(!calleeFunDecInfos.isEmpty());
       return new DeclarationInfo(
-          calleeFunDecInfos.get(calleeFunDecInfos.size() - 1),
-          calleeFunDecInfos.subList(0, calleeFunDecInfos.size() - 1));
+          calleeFunDecInfos.getLast(), calleeFunDecInfos.subList(0, calleeFunDecInfos.size() - 1));
     }
   }
 }
