@@ -66,6 +66,7 @@ import org.sosy_lab.cpachecker.exceptions.UnrecognizedCodeException;
 import org.sosy_lab.cpachecker.exceptions.UnsupportedCodeException;
 import org.sosy_lab.cpachecker.util.BuiltinFloatFunctions;
 import org.sosy_lab.cpachecker.util.BuiltinFunctions;
+import org.sosy_lab.cpachecker.util.floatingpoint.FloatValue;
 import org.sosy_lab.cpachecker.util.predicates.pathformula.ErrorConditions;
 import org.sosy_lab.cpachecker.util.predicates.pathformula.SSAMap.SSAMapBuilder;
 import org.sosy_lab.cpachecker.util.predicates.pathformula.pointeraliasing.PointerTargetSetBuilder;
@@ -76,6 +77,8 @@ import org.sosy_lab.cpachecker.util.predicates.smt.FormulaManagerView;
 import org.sosy_lab.java_smt.api.BitvectorFormula;
 import org.sosy_lab.java_smt.api.BooleanFormula;
 import org.sosy_lab.java_smt.api.FloatingPointFormula;
+import org.sosy_lab.java_smt.api.FloatingPointFormulaManager;
+import org.sosy_lab.java_smt.api.FloatingPointNumber;
 import org.sosy_lab.java_smt.api.FloatingPointRoundingMode;
 import org.sosy_lab.java_smt.api.Formula;
 import org.sosy_lab.java_smt.api.FormulaType;
@@ -179,8 +182,8 @@ public class ExpressionToFormulaVisitor
     final FormulaType<?> returnFormulaType = conv.getFormulaTypeFromCType(returnType);
 
     final boolean signed;
-    if (calculationType instanceof CSimpleType) {
-      signed = conv.machineModel.isSigned((CSimpleType) calculationType);
+    if (calculationType instanceof CSimpleType cSimpleType) {
+      signed = conv.machineModel.isSigned(cSimpleType);
     } else {
       // For pointers: happens only for additions/subtractions (for which signedness is irrelevant)
       // and comparisons. GCC implements pointer comparisons as unsigned.
@@ -195,11 +198,11 @@ public class ExpressionToFormulaVisitor
     final Formula ret;
 
     switch (op) {
-      case PLUS:
+      case PLUS -> {
         if (!(promT1 instanceof CPointerType)
             && !(promT2 instanceof CPointerType)) { // Just an addition e.g. 6 + 7
           ret = mgr.makePlus(f1, f2);
-        } else if (!(promT2 instanceof CPointerType)) {
+        } else if (!(promT2 instanceof CPointerType cPointerType)) {
           // operand1 is a pointer => we should multiply the second summand by the size of the
           // pointer target
           ret =
@@ -208,14 +211,12 @@ public class ExpressionToFormulaVisitor
         } else if (!(promT1 instanceof CPointerType)) {
           // operand2 is a pointer => we should multiply the first summand by the size of the
           // pointer target
-          ret =
-              mgr.makePlus(
-                  f2, mgr.makeMultiply(f1, getSizeExpression(((CPointerType) promT2).getType())));
+          ret = mgr.makePlus(f2, mgr.makeMultiply(f1, getSizeExpression(cPointerType.getType())));
         } else {
           throw new UnrecognizedCodeException("Can't add pointers", edge, exp);
         }
-        break;
-      case MINUS:
+      }
+      case MINUS -> {
         if (!(promT1 instanceof CPointerType)
             && !(promT2 instanceof CPointerType)) { // Just a subtraction e.g. 6 - 7
           ret = mgr.makeMinus(f1, f2);
@@ -225,14 +226,12 @@ public class ExpressionToFormulaVisitor
           ret =
               mgr.makeMinus(
                   f1, mgr.makeMultiply(f2, getSizeExpression(((CPointerType) promT1).getType())));
-        } else if (promT1 instanceof CPointerType) {
+        } else if (promT1 instanceof CPointerType cPointerType) {
           // Pointer subtraction => (operand1 - operand2) / sizeof (*operand1)
           if (promT1.equals(promT2)) {
             ret =
                 mgr.makeDivide(
-                    mgr.makeMinus(f1, f2),
-                    getSizeExpression(((CPointerType) promT1).getType()),
-                    true);
+                    mgr.makeMinus(f1, f2), getSizeExpression(cPointerType.getType()), true);
           } else {
             throw new UnrecognizedCodeException(
                 "Can't subtract pointers of different types", edge, exp);
@@ -241,64 +240,43 @@ public class ExpressionToFormulaVisitor
           throw new UnrecognizedCodeException(
               "Can't subtract a pointer from a non-pointer", edge, exp);
         }
-        break;
-      case MULTIPLY:
-        ret = mgr.makeMultiply(f1, f2);
-        break;
-      case DIVIDE:
-        ret = mgr.makeDivide(f1, f2, signed);
-        break;
-      case MODULO:
-        ret = mgr.makeModulo(f1, f2, signed);
+      }
+      case MULTIPLY -> ret = mgr.makeMultiply(f1, f2);
+      case DIVIDE -> ret = mgr.makeDivide(f1, f2, signed);
+      case MODULO -> {
+        // Modulo in C is remainder in SMTLIB2
+        ret = mgr.makeRemainder(f1, f2, signed);
 
         addModuloConstraints(exp, f1, f2, signed, ret);
-
-        break;
-      case BINARY_AND:
-        ret = mgr.makeAnd(f1, f2);
-        break;
-      case BINARY_OR:
-        ret = mgr.makeOr(f1, f2);
-        break;
-      case BINARY_XOR:
-        ret = mgr.makeXor(f1, f2);
-        break;
-      case SHIFT_LEFT:
-
-        // NOTE: The type of the result is that of the promoted left operand. (6.5.7 3)
-        ret = mgr.makeShiftLeft(f1, f2);
-        break;
-      case SHIFT_RIGHT:
-        // NOTE: The type of the result is that of the promoted left operand. (6.5.7 3)
-        ret = mgr.makeShiftRight(f1, f2, signed);
-        break;
-
-      case GREATER_THAN:
-      case GREATER_EQUAL:
-      case LESS_THAN:
-      case LESS_EQUAL:
-      case EQUALS:
-      case NOT_EQUALS:
-        {
-          BooleanFormula result =
-              switch (op) {
-                case GREATER_THAN -> mgr.makeGreaterThan(f1, f2, signed);
-                case GREATER_EQUAL -> mgr.makeGreaterOrEqual(f1, f2, signed);
-                case LESS_THAN -> mgr.makeLessThan(f1, f2, signed);
-                case LESS_EQUAL -> mgr.makeLessOrEqual(f1, f2, signed);
-                case EQUALS -> handleEquals(exp, f1, f2);
-                case NOT_EQUALS -> conv.bfmgr.not(mgr.makeEqual(f1, f2));
-                default -> throw new AssertionError();
-              };
-          // Here we directly use the returnFormulaType instead of the calculcationType
-          // to avoid a useless cast.
-          // However, this means that we may not call makeCast() below
-          // because it expects the input in the calculationType.
-          // So we return here directly.
-          return conv.ifTrueThenOneElseZero(returnFormulaType, result);
-        }
-      default:
-        throw new UnrecognizedCodeException("Unknown binary operator", edge, exp);
+      }
+      case BINARY_AND -> ret = mgr.makeAnd(f1, f2);
+      case BINARY_OR -> ret = mgr.makeOr(f1, f2);
+      case BINARY_XOR -> ret = mgr.makeXor(f1, f2);
+      case SHIFT_LEFT ->
+          // NOTE: The type of the result is that of the promoted left operand. (6.5.7 3)
+          ret = mgr.makeShiftLeft(f1, f2);
+      case SHIFT_RIGHT ->
+          // NOTE: The type of the result is that of the promoted left operand. (6.5.7 3)
+          ret = mgr.makeShiftRight(f1, f2, signed);
+      case GREATER_THAN, GREATER_EQUAL, LESS_THAN, LESS_EQUAL, EQUALS, NOT_EQUALS -> {
+        BooleanFormula result =
+            switch (op) {
+              case GREATER_THAN -> mgr.makeGreaterThan(f1, f2, signed);
+              case GREATER_EQUAL -> mgr.makeGreaterOrEqual(f1, f2, signed);
+              case LESS_THAN -> mgr.makeLessThan(f1, f2, signed);
+              case LESS_EQUAL -> mgr.makeLessOrEqual(f1, f2, signed);
+              case EQUALS -> handleEquals(exp, f1, f2);
+              case NOT_EQUALS -> conv.bfmgr.not(mgr.makeEqual(f1, f2));
+              default -> throw new AssertionError();
+            };
+        // Here we directly use the returnFormulaType instead of the calculcationType
+        // to avoid a useless cast.
+        // However, this means that we may not call makeCast() below
+        // because it expects the input in the calculationType.
+        // So we return here directly.
+        return conv.ifTrueThenOneElseZero(returnFormulaType, result);
+      }
+      default -> throw new UnrecognizedCodeException("Unknown binary operator", edge, exp);
     }
 
     // The CalculationType could be different from returnType, so we cast the result.
@@ -336,8 +314,8 @@ public class ExpressionToFormulaVisitor
   }
 
   /**
-   * Some solvers (Mathsat, Princess) do not support MODULO and replace it with an UF. Thus, we
-   * limit the result of the UF with additional constraints.
+   * Some solvers (Mathsat, Princess) do not support MODULO/REMAINDER and replace it with an UF.
+   * Thus, we limit the result of the UF with additional constraints.
    */
   private void addModuloConstraints(
       final CBinaryExpression exp,
@@ -347,9 +325,9 @@ public class ExpressionToFormulaVisitor
       final Formula ret) {
     BooleanFormulaManagerView bfmgr = mgr.getBooleanFormulaManager();
 
-    if (exp.getOperand2() instanceof CIntegerLiteralExpression) {
+    if (exp.getOperand2() instanceof CIntegerLiteralExpression cIntegerLiteralExpression) {
       // We use a BigInteger because it can always be made positive, this is not true for type long!
-      BigInteger modulo = ((CIntegerLiteralExpression) exp.getOperand2()).getValue();
+      BigInteger modulo = cIntegerLiteralExpression.getValue();
       if (!modulo.equals(BigInteger.ZERO)) {
         // modular congruence expects a positive modulo. If our divisor b in a%b is negative, we
         // actually want to generate a modular congruence condition mod (-b):
@@ -425,9 +403,9 @@ public class ExpressionToFormulaVisitor
     }
 
     CExpression fieldRef = fExp.getFieldOwner();
-    if (fieldRef instanceof CIdExpression) {
-      CSimpleDeclaration decl = ((CIdExpression) fieldRef).getDeclaration();
-      if (decl instanceof CDeclaration && ((CDeclaration) decl).isGlobal()) {
+    if (fieldRef instanceof CIdExpression cIdExpression) {
+      CSimpleDeclaration decl = cIdExpression.getDeclaration();
+      if (decl instanceof CDeclaration cDeclaration && cDeclaration.isGlobal()) {
         // this is the reference to a global field variable
 
         // we can omit the warning (no pointers involved),
@@ -460,70 +438,69 @@ public class ExpressionToFormulaVisitor
 
   @Override
   public Formula visit(CFloatLiteralExpression fExp) throws UnrecognizedCodeException {
-    FormulaType<?> t = conv.getFormulaTypeFromCType(fExp.getExpressionType());
-    return mgr.getFloatingPointFormulaManager().makeNumber(fExp.getValue(), (FloatingPointType) t);
+    FloatingPointFormulaManager fmgr = mgr.getFloatingPointFormulaManager();
+    FloatValue value = fExp.getValue();
+    FloatingPointNumber converted = value.toFloatingPointNumber();
+
+    return fmgr.makeNumber(
+        converted.getExponent(),
+        converted.getMantissa(),
+        converted.getMathSign(),
+        FormulaType.getFloatingPointType(value.getFormat().expBits(), value.getFormat().sigBits()));
   }
 
   @Override
   public Formula visit(CStringLiteralExpression lexp) throws UnrecognizedCodeException {
     // we create a string constant representing the given
     // string literal
-    return conv.makeStringLiteral(lexp.getContentWithNullTerminator());
+    return conv.makeStringLiteral(lexp.getContentWithNullTerminator(), constraints);
   }
 
   @Override
   public Formula visit(CUnaryExpression exp) throws UnrecognizedCodeException {
     CExpression operand = exp.getOperand();
     UnaryOperator op = exp.getOperator();
-    switch (op) {
-      case MINUS:
-      case TILDE:
-        {
-          // Handle Integer Promotion
-          CType t = operand.getExpressionType();
-          CType promoted = t.getCanonicalType();
-          if (CTypes.isIntegerType(promoted)) {
-            // Integer types smaller than int are promoted when an operation is performed on them.
-            promoted = conv.machineModel.applyIntegerPromotion(promoted);
-          }
-          Formula operandFormula = toFormula(operand);
-          operandFormula = conv.makeCast(t, promoted, operandFormula, constraints, edge);
-          Formula ret;
-          if (op == UnaryOperator.MINUS) {
-            ret = mgr.makeNegate(operandFormula);
-          } else {
-            assert op == UnaryOperator.TILDE : "This case should be impossible because of switch";
-            ret = mgr.makeNot(operandFormula);
-          }
-
-          CType returnType = exp.getExpressionType();
-          FormulaType<?> returnFormulaType = conv.getFormulaTypeFromCType(returnType);
-          if (!returnFormulaType.equals(mgr.getFormulaType(ret))) {
-            ret = conv.makeCast(promoted, returnType, ret, constraints, edge);
-          }
-          assert returnFormulaType.equals(mgr.getFormulaType(ret))
-              : "Returntype "
-                  + returnFormulaType
-                  + " and Formulatype "
-                  + mgr.getFormulaType(ret)
-                  + " do not match in visit(CUnaryExpression) for "
-                  + exp;
-          return ret;
+    return switch (op) {
+      case MINUS, TILDE -> {
+        // Handle Integer Promotion
+        CType t = operand.getExpressionType();
+        CType promoted = t.getCanonicalType();
+        if (CTypes.isIntegerType(promoted)) {
+          // Integer types smaller than int are promoted when an operation is performed on them.
+          promoted = conv.machineModel.applyIntegerPromotion(promoted);
+        }
+        Formula operandFormula = toFormula(operand);
+        operandFormula = conv.makeCast(t, promoted, operandFormula, constraints, edge);
+        Formula ret;
+        if (op == UnaryOperator.MINUS) {
+          ret = mgr.makeNegate(operandFormula);
+        } else {
+          assert op == UnaryOperator.TILDE : "This case should be impossible because of switch";
+          ret = mgr.makeNot(operandFormula);
         }
 
-      case AMPER:
-        return visitDefault(exp);
+        CType returnType = exp.getExpressionType();
+        FormulaType<?> returnFormulaType = conv.getFormulaTypeFromCType(returnType);
+        if (!returnFormulaType.equals(mgr.getFormulaType(ret))) {
+          ret = conv.makeCast(promoted, returnType, ret, constraints, edge);
+        }
+        assert returnFormulaType.equals(mgr.getFormulaType(ret))
+            : "Returntype "
+                + returnFormulaType
+                + " and Formulatype "
+                + mgr.getFormulaType(ret)
+                + " do not match in visit(CUnaryExpression) for "
+                + exp;
+        yield ret;
+      }
+      case AMPER -> visitDefault(exp);
 
-      case SIZEOF:
+      case SIZEOF -> {
         CType lCType = exp.getOperand().getExpressionType();
-        return getSizeExpression(lCType);
-
-      case ALIGNOF:
-        return handleAlignOf(exp, exp.getOperand().getExpressionType());
-
-      default:
-        throw new UnrecognizedCodeException("Unknown unary operator", edge, exp);
-    }
+        yield getSizeExpression(lCType);
+      }
+      case ALIGNOF -> handleAlignOf(exp, exp.getOperand().getExpressionType());
+    };
   }
 
   @Override
@@ -663,8 +640,8 @@ public class ExpressionToFormulaVisitor
 
     // First let's handle special cases such as assumes, allocations, nondets, external models, etc.
     final String functionName;
-    if (functionNameExpression instanceof CIdExpression) {
-      functionName = ((CIdExpression) functionNameExpression).getName();
+    if (functionNameExpression instanceof CIdExpression cIdExpression) {
+      functionName = cIdExpression.getName();
 
       if (conv.options.isNondetFunction(functionName)
           || conv.options.isMemoryAllocationFunction(functionName)
@@ -801,7 +778,7 @@ public class ExpressionToFormulaVisitor
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
             FloatingPointFormula zero =
                 fpfmgr.makeNumber(0.0, (FormulaType.FloatingPointType) formulaType);
             FloatingPointFormula nan = fpfmgr.makeNaN((FormulaType.FloatingPointType) formulaType);
@@ -826,7 +803,7 @@ public class ExpressionToFormulaVisitor
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
 
             FormulaType<?> resultType = conv.getFormulaTypeFromCType(CNumericTypes.INT);
             return conv.bfmgr.ifThenElse(
@@ -844,7 +821,7 @@ public class ExpressionToFormulaVisitor
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
 
             FormulaType<?> resultType = conv.getFormulaTypeFromCType(CNumericTypes.INT);
             return conv.bfmgr.ifThenElse(
@@ -860,7 +837,7 @@ public class ExpressionToFormulaVisitor
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
             FloatingPointFormula fp_zero =
                 fpfmgr.makeNumber(0, (FormulaType.FloatingPointType) formulaType);
 
@@ -884,7 +861,7 @@ public class ExpressionToFormulaVisitor
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
             FloatingPointFormula fp_zero =
                 fpfmgr.makeNumber(0, (FormulaType.FloatingPointType) formulaType);
 
@@ -908,7 +885,7 @@ public class ExpressionToFormulaVisitor
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
 
             FormulaType<?> resultType = conv.getFormulaTypeFromCType(CNumericTypes.INT);
             Formula zero = mgr.makeNumber(resultType, 0);
@@ -938,7 +915,7 @@ public class ExpressionToFormulaVisitor
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param0 =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
             FloatingPointFormula param1 =
                 (FloatingPointFormula) processOperand(parameters.get(1), paramType, paramType);
 
@@ -979,7 +956,7 @@ public class ExpressionToFormulaVisitor
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param0 =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
             FloatingPointFormula param1 =
                 (FloatingPointFormula) processOperand(parameters.get(1), paramType, paramType);
 
@@ -1028,7 +1005,7 @@ public class ExpressionToFormulaVisitor
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param0 =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
             FloatingPointFormula param1 =
                 (FloatingPointFormula) processOperand(parameters.get(1), paramType, paramType);
 
@@ -1050,7 +1027,7 @@ public class ExpressionToFormulaVisitor
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param0 =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
             FloatingPointFormula param1 =
                 (FloatingPointFormula) processOperand(parameters.get(1), paramType, paramType);
 
@@ -1073,7 +1050,7 @@ public class ExpressionToFormulaVisitor
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param0 =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
             FloatingPointFormula param1 =
                 (FloatingPointFormula) processOperand(parameters.get(1), paramType, paramType);
             FloatingPointFormula zero =
@@ -1082,7 +1059,7 @@ public class ExpressionToFormulaVisitor
             BooleanFormula isFirstNaN = fpfmgr.isNaN(param0);
             BooleanFormula isSecondNaN = fpfmgr.isNaN(param1);
 
-            FloatingPointFormula diff;
+            FloatingPointFormula diff = fpfmgr.subtract(param0, param1);
 
             return conv.bfmgr.ifThenElse(
                 isFirstNaN,
@@ -1090,10 +1067,7 @@ public class ExpressionToFormulaVisitor
                 conv.bfmgr.ifThenElse(
                     isSecondNaN,
                     param1,
-                    conv.bfmgr.ifThenElse(
-                        fpfmgr.greaterThan((diff = fpfmgr.subtract(param0, param1)), zero),
-                        diff,
-                        zero)));
+                    conv.bfmgr.ifThenElse(fpfmgr.greaterThan(diff, zero), diff, zero)));
           }
         }
       } else if (BuiltinFloatFunctions.matchesIsless(functionName)) {
@@ -1150,7 +1124,7 @@ public class ExpressionToFormulaVisitor
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param0 =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
             FloatingPointFormula param1 =
                 (FloatingPointFormula) processOperand(parameters.get(1), paramType, paramType);
 
@@ -1170,7 +1144,7 @@ public class ExpressionToFormulaVisitor
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
             FloatingPointFormula fp_zero = fpfmgr.makeNumber(0, (FloatingPointType) formulaType);
 
             FormulaType<?> resultType = conv.getFormulaTypeFromCType(CNumericTypes.INT);
@@ -1201,7 +1175,7 @@ public class ExpressionToFormulaVisitor
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
 
             FloatingPointFormula zero = fpfmgr.makeNumber(0, (FloatingPointType) formulaType);
             FloatingPointFormula nan = fpfmgr.makeNaN((FloatingPointType) formulaType);
@@ -1260,6 +1234,14 @@ public class ExpressionToFormulaVisitor
         if (result != null) {
           return result;
         }
+      } else if (functionName.equals("__CPACHECKER_atexit_next")) {
+        // __CPACHECKER_atexit_next is not a constant function, but returns a different function
+        // pointer from the atexit stack every time it is being called. We model this by returning a
+        // fresh variable that may point to any function in the program. The function pointer CPA,
+        // which will be run in parallel, tracks the actual target of the pointer and makes sure
+        // that the right function is always called.
+        return conv.makeNondet(functionName, returnType, ssa, constraints);
+
       } else if (!CtoFormulaConverter.PURE_EXTERNAL_FUNCTIONS.contains(functionName)) {
         if (parameters.isEmpty()) {
           // function of arity 0
@@ -1358,7 +1340,7 @@ public class ExpressionToFormulaVisitor
    *
    * @param formatString the scanf format string
    * @param pVariableType the type of the receiving variable
-   * @return true if the scanf-format-specifier agrees with the type it writes to
+   * @return whether the scanf-format-specifier agrees with the type it writes to
    * @throws UnsupportedCodeException if the format specifier is not supported
    */
   private boolean isCompatibleWithScanfFormatString(String formatString, CType pVariableType)
@@ -1384,7 +1366,7 @@ public class ExpressionToFormulaVisitor
           "fscanf() with more than 3 parameters is not supported", edge, e);
     }
 
-    CExpression file = pParameters.get(0);
+    CExpression file = pParameters.getFirst();
 
     if (file instanceof CIdExpression idExpression) {
       if (!isFilePointer(idExpression.getExpressionType())) {
@@ -1439,7 +1421,7 @@ public class ExpressionToFormulaVisitor
       if (formulaType.isFloatingPointType()) {
         FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
         FloatingPointFormula param =
-            (FloatingPointFormula) processOperand(pParameters.get(0), paramType, paramType);
+            (FloatingPointFormula) processOperand(pParameters.getFirst(), paramType, paramType);
         FloatingPointFormula zero = fpfmgr.makeNumber(0, (FloatingPointType) formulaType);
         FloatingPointFormula fp_half = fpfmgr.makeNumber(0.5, (FloatingPointType) formulaType);
         FloatingPointFormula fp_neg_half = fpfmgr.makeNumber(-0.5, (FloatingPointType) formulaType);
@@ -1467,7 +1449,7 @@ public class ExpressionToFormulaVisitor
           castPositive = fpfmgr.castTo(rounded_positive_Infinity, signed, type);
         }
 
-        // XXX: Currently MathSAT does not support the rounding mode NEAREST_TIE_AWAY,
+        // XXX: Currently, MathSAT does not support the rounding mode NEAREST_TIE_AWAY,
         // which corresponds to the semantics of 'round'.
         // Hence, we represent those semantics by the formula below, until there
         // is a release of MathSAT supporting NEAREST_TIE_AWAY.
@@ -1514,7 +1496,7 @@ public class ExpressionToFormulaVisitor
       if (formulaType.isFloatingPointType()) {
         FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
         FloatingPointFormula param =
-            (FloatingPointFormula) processOperand(pParameters.get(0), paramType, paramType);
+            (FloatingPointFormula) processOperand(pParameters.getFirst(), paramType, paramType);
 
         FloatingPointFormula rounded = fpfmgr.round(param, pRoundingMode);
 
@@ -1548,7 +1530,7 @@ public class ExpressionToFormulaVisitor
       FormulaType<?> formulaType = conv.getFormulaTypeFromCType(paramType);
       if (formulaType.isFloatingPointType()) {
         FloatingPointFormula param0 =
-            (FloatingPointFormula) processOperand(pParameters.get(0), paramType, paramType);
+            (FloatingPointFormula) processOperand(pParameters.getFirst(), paramType, paramType);
         FloatingPointFormula param1 =
             (FloatingPointFormula) processOperand(pParameters.get(1), paramType, paramType);
 
@@ -1590,7 +1572,7 @@ public class ExpressionToFormulaVisitor
 
       if (paramFormulaType.isBitvectorType()) {
         BitvectorFormulaManagerView bvMgrv = mgr.getBitvectorFormulaManager();
-        BitvectorFormula bvParameter = (BitvectorFormula) toFormula(pParameters.get(0));
+        BitvectorFormula bvParameter = (BitvectorFormula) toFormula(pParameters.getFirst());
         BitvectorType bvParamType = (BitvectorType) paramFormulaType;
         BitvectorType bvReturnType = (BitvectorType) formulaReturnType;
         int offset = 0;
